# orangino

./: .env.example  .gitignore  .orangino.example.toml  Cargo.toml  README.md  install_chromedriver.sh  install_geckodriver.sh  requirements.txt
.github/workflows/: toolchain.yml
src/: app.py  lib.rs  main.rs  orangino.rs
src/config/: emojis.rs  keys.rs  mod.rs
src/controllers/: mod.rs  slack.rs  types.rs  users.rs
src/utils/: mod.rs
