[package]
name = "orangino"
version = "0.1.0"
authors = ["Marcelo Cardoso <marcelovicentegc@gmail.com>"]
edition = "2018"

[lib]
name = "orangino"
path = "src/lib.rs"

[[bin]]
name = "orangino"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "native-tls"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
pyo3 = "0.10.1"
indicatif = "0.14.0"
console = ">=0.9.1, <1.0.0"
chrono = "0.4"
randua = "0.1.6"
