[package]
name = "orangino"
version = "0.1.1"
authors = ["Marcelo Cardoso <marcelovicentegc@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A Tangerino plugin for Slack to punch in and out from your CLI, while letting your team know right away."
readme = "README.md"
homepage = "https://github.com/marcelovicentegc/orangino"
repository = "https://github.com/marcelovicentegc/orangino"
keywords = ["cli", "slack", "tangerino"]
categories = ["command-line-utilities"]

[lib]
name = "orangino"
path = "src/lib.rs"

[[bin]]
name = "orangino"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "native-tls"] }
tokio = { version = "1.8", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
pyo3 = "0.10.1"
indicatif = "0.14.0"
console = ">=0.9.1, <1.0.0"
chrono = "0.4"
randua = "0.1.6"
toml = "0.5.6"
directories = "2.0"
